--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
   <head>L2 Lissajous Orbit</head>
   <body>
     <div align="center">
-      <img src="orbit.gif"/>
+      <img src="orbit_compressed.gif"/>
     </div>
   </body>
 </html>
