--- a/index.html
+++ b/index.html
@@ -2,7 +2,21 @@
   <head>L2 Lissajous Orbit</head>
   <body>
     <div align="center">
-      <img src="orbit_compressed.gif"/>
+      <table>
+        <tr>
+          <td>
+            <img src="yx-plane.gif"/>
+          </td>
+          <td>
+            <img src="yz-plane.gif"/>
+          </td>
+        </tr>
+        <tr>
+          <td colspan="2" align="center">
+            <img src="zx-plane.gif"/>
+          </td>
+        </tr>
+      </table>
     </div>
   </body>
 </html>
