--- a/index.html
+++ b/index.html
@@ -16,6 +16,11 @@
             <img src="zx-plane.gif"/>
           </td>
         </tr>
+        <tr>
+          <td colspan="2" align="center">
+            <img src="3d.gif"/>
+          </td>
+        </tr>
       </table>
     </div>
   </body>
