--- a/index.html
+++ b/index.html
@@ -5,20 +5,20 @@
       <table>
         <tr>
           <td>
-            <img src="yx-plane.gif"/>
+            <img src="img/yx-plane.gif"/>
           </td>
           <td>
-            <img src="yz-plane.gif"/>
+            <img src="img/yz-plane.gif"/>
           </td>
         </tr>
         <tr>
           <td colspan="2" align="center">
-            <img src="zx-plane.gif"/>
+            <img src="img/zx-plane.gif"/>
           </td>
         </tr>
         <tr>
           <td colspan="2" align="center">
-            <img src="3d.gif"/>
+            <img src="img/3d.gif"/>
           </td>
         </tr>
       </table>
