--- a/index.html
+++ b/index.html
@@ -1,26 +1,7 @@
 <html>
   <body>
     <div align="center">
-      <table>
-        <tr>
-          <td>
-            <img src="img/yx-plane.gif"/>
-          </td>
-          <td>
-            <img src="img/yz-plane.gif"/>
-          </td>
-        </tr>
-        <tr>
-          <td colspan="2" align="center">
-            <img src="img/zx-plane.gif"/>
-          </td>
-        </tr>
-        <tr>
-          <td colspan="2" align="center">
-            <img src="img/3d.gif"/>
-          </td>
-        </tr>
-      </table>
+      <img src="img/trajectory-animated-3d-with-projections-on-planes.gif"/>
     </div>
   </body>
 </html>
